@@ -1,5 +1,12 @@
 2005-08-07  Christian Persch  <chpe@cvs.gnome.org>
 
+	* src/Components.cpp:
+	* src/Components.h:
+
+	Move class definition to .cpp.
+
+2005-08-07  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/Writer.cpp:
 
 	Fix for latest firefox trunk.
